feat: 更新机械臂点位配置，添加新环抱点并修改夹爪负载配置

--- a/persistent/preset/payload_config.yaml
+++ b/persistent/preset/payload_config.yaml
@@ -1,12 +1,4 @@
-# 机械臂负载配置
-# 夹爪重量会持久化保存，夹取物品重量不保存
-
-# 左臂夹爪配置
 left_gripper:
-  mass: 0.8        # 夹爪质量 (kg)
-  # 质心固定为 x=150mm (末端向前15cm)
-
-# 右臂夹爪配置  
+  mass: 0.0
 right_gripper:
-  mass: 0.8        # 夹爪质量 (kg)
-  # 质心固定为 x=150mm (末端向前15cm)
+  mass: 1.8
