feat: Implement velocity limiting and automatic interpolation in SmoothServoBridge
- Added velocity limiting and automatic interpolation features to prevent excessive speeds in the robotic arm.
- Introduced intelligent starting position selection in addCommand to use current position when command buffer is stale.
- Implemented velocity limit checks and automatic insertion of intermediate points based on required time calculations.
- Updated API to support optional current position parameter in addCommand.
- Enhanced configuration options in robot_config.yaml for IK solver parameters.
- Added logging for command additions and interpolation actions for better traceability.
- Improved performance statistics tracking for buffer overflows and command processing.

--- a/qyh_jushen_ws/src/qyh_jaka_control/config/robot_config.yaml
+++ b/qyh_jushen_ws/src/qyh_jaka_control/config/robot_config.yaml
@@ -62,5 +62,13 @@
     collision_enabled: true
     collision_level: 2  # 0-5, higher = more sensitive
 
+    # IK求解器参数 (VR遥操作模式)
+    ik_solver:
+      enabled: false  # true: 启用IK模式(订阅VR位姿), false: 标准Bridge模式(订阅关节指令)
+      target_x_left: false  # false: 目标坐标系X轴向前, true: X轴向左
+      has_z_offset: true  # 是否应用Z轴偏移补偿
+      left_z_offset: 0.219885132  # 左臂零位Z偏移(m)
+      right_z_offset: 0.217950931  # 右臂零位Z偏移(m)
+
   
   
